--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
-    "@mui/icons-material": "^7.3.1",
-    "@mui/material": "^7.3.1",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
+    "@mui/x-data-grid": "^8.11.3",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
