--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
-    "@mui/icons-material": "^7.3.2",
+    "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.2",
     "@mui/x-data-grid": "^8.11.3",
+    "@mui/x-date-pickers": "^8.12.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
@@ -19,6 +20,8 @@
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "axios": "^1.11.0",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.18",
     "lucide-react": "^0.537.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
